lucia-macros/tests/ui/error_enum/bad_params.stderr
error: Parameters must end with the `Params` suffix.
 --> tests/ui/error_enum/bad_params.rs:8:14
  |
8 |   pub struct Rfewr;
  |              ^^^^^
